# OpenGL-tutorial

./: .gitignore  .gitmodules  CMakeLists.txt  EBO.cpp  EBO.h  README.md  VAO.cpp  VAO.h  VBO.cpp  VBO.h  builddefault.frag  main.cpp  shaderClass.cpp  shaderClass.h
libs/: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/glm/: CMakeLists.txt
shaders/: default.frag  default.vert
shaders/light/: light.frag  light.vert
src/: CMakeLists.txt
src/EBO/: CMakeLists.txt
src/EBO/include/EBO/: EBO.h
src/EBO/src/: EBO.cpp
src/VAO/: CMakeLists.txt
src/VAO/include/VAO/: VAO.h
src/VAO/src/: VAO.cpp
src/VBO/: CMakeLists.txt
src/VBO/src/: VBO.cpp
src/camera/: CMakeLists.txt
src/camera/include/camera/: camera.h
src/camera/src/: camera.cpp
src/shader/: CMakeLists.txt
src/shader/include/shader/: shaderClass.h
src/shader/src/: shaderClass.cpp
src/stb_image/: CMakeLists.txt
src/stb_image/src/: stb_image.cpp
src/textures/: CMakeLists.txt
src/textures/include/textures/: Texture.h  texture.h
src/textures/src/: texture.cpp
